<resources>
    <string name="app_name">KinmenTV</string>

    <string name="mp_control_def_time">00:00:00</string>
    <string name="NULL">N/A</string>
    <string name="mp_contorl_time_divider">/</string>
    <string name="mp_control_current_paly">当前播放：</string>
    <string name="mp_flow_buff_text">加载中请稍候…</string>
    <string name="dialog_utils_loading_text">数据加载中…</string>

    <string name="live">直播</string>
    <string name="anime">动漫</string>
    <string name="movice">电影</string>
    <string name="tv_trama">电视剧</string>
    <string name="game">游戏</string>
    <string name="variety">综艺</string>
    <string name="children">少儿</string>
    <string name="publication">刊物</string>

    <string name="filtrate">筛　　选</string>
    <string name="all">全　　部</string>
    <string name="other">其　　他</string>

    <string name="search_all_movice_up">共搜索到</string>
    <string name="search_all_movice_down">部影片</string>


    <string name="right_now_play">立即播放</string>
    <string name="more_details">更多简介</string>
    <string name="episode_list">剧集列表</string>
    <string name="related_movice">相关影片</string>
    <string name="type">按类型</string>
    <string name="area">按地区</string>
    <string name="date">按时间</string>
    <string name="select_action">操作选项</string>
    <string name="clean_filtrate">清除筛选</string>


    //直播
    <string name="live_bottom_now">正在播出：</string>
    <string name="live_bottom_next">接下来播出：</string>
    <string name="live_dialog_title">锁码频道需要验证身份，请输入密码</string>
    <string name="live_left_title_0">国内频道</string>
    <string name="live_left_title_0_">无国内频道</string>
    <string name="live_left_title_1">国外频道</string>
    <string name="live_left_title_1_">无国外频道</string>
    <string name="live_left_title_2">锁码频道</string>
    <string name="live_left_title_2_">无锁码频道</string>

    //刊物
    <string name="magazine_title">刊物</string>
    <string name="magazine_back_message">按菜單鍵或長按返回鍵退出選擇其他刊物</string>



    //更新APK
    <string name="find_new_version">新版本</string>
    <string name="version_code">版本編號:</string>
    <string name="updata_content">更新內容:</string>
    //按钮文字
    <string name="button_sure">確定</string>
    <string name="button_cancle">取消</string>
    //下载
    <string name="download_failure_retry">下載失敗，請重試</string>
    <string name="download_success">下載成功</string>
    <string name="downloading_please_wait">下載中，請耐心等待</string>
    <string name="download_backgroud">後臺下載</string>
</resources>
