<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@mipmap/update_dialog_bg"
    android:padding="5dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_new_version"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"/>


    <TextView
        android:id="@+id/updateNewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_code"
        android:textSize="20sp"
        android:padding="5dp"
        android:textColor="@color/white"/>

    <ScrollView
        android:id="@+id/update_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/updateContentLin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.1"
        android:gravity="center">
        <TextView
            android:id="@+id/update_pg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="right"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:padding="5dp"/>

        <ProgressBar
            android:id="@+id/update_pg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="4dp"
            android:minHeight="4dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/update_pg_bg"
            android:background="@android:color/transparent"
            android:indeterminate="false"
            android:layout_margin="2dp"
            android:layout_marginTop="5dp"/>
        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/rightAwayUpdateTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sure"
            android:textSize="20sp"
            android:padding="5dp"
            android:background="@drawable/update_button_sl"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/laterOnUpdateTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancle"
            android:textSize="20sp"
            android:padding="5dp"
            android:background="@drawable/update_button_sl"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>